--- a/src/home.html
+++ b/src/home.html
@@ -121,7 +121,7 @@
                 </div>
             </section>
         </main>
-        @@include('html/_footer.htm',{})
+        @@include('html/_footer.htm',{"class":""})
     </div>
 
 </div>
