--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,16 @@
         <li><a target="_blank" href="services.html">Services</a></li>
         <li><a target="_blank" href="who.html">Who we are</a></li>
         <li><a target="_blank" href="how.html">How do it</a></li>
+        <li><a target="_blank" href="communication.html">Communication</a></li>
+        <li><a target="_blank" href="contact.html">Contact</a></li>
+        <li><a target="_blank" href="kiosk.html">Kiosk</a></li>
+        <li><a target="_blank" href="operations.html">Operations</a></li>
+        <li><a target="_blank" href="station.html">Station</a></li>
+        <li><a target="_blank" href="station.html">Station</a></li>
+        <li><a target="_blank" href="train.html">Train</a></li>
+        <li><a target="_blank" href="transit.html">Transit</a></li>
+        <li><a target="_blank" href="web.html">Web</a></li>
+        <li><a target="_blank" href="what.html">What</a></li>
     </ol>
 </div>
 </body>
