--- a/src/home.html
+++ b/src/home.html
@@ -45,9 +45,9 @@
                                 <div class="card__arrow">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="41.977" height="31.499"
                                          viewBox="0 0 41.977 31.499">
-                                        <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                              d="M186.26,364.5l-2.816-2.75,11-11H160v-3.929h34.446L183.379,335.75l2.816-2.75,15.782,15.782Z"
-                                              transform="translate(-160 -333)" fill="#fff"/>
+                                        <path
+                                                d="M186.26,364.5l-2.816-2.75,11-11H160v-3.929h34.446L183.379,335.75l2.816-2.75,15.782,15.782Z"
+                                                transform="translate(-160 -333)" fill="#fff"/>
                                     </svg>
                                 </div>
                             </div>
@@ -64,9 +64,9 @@
                                 <div class="card__arrow">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="41.977" height="31.499"
                                          viewBox="0 0 41.977 31.499">
-                                        <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                              d="M186.26,364.5l-2.816-2.75,11-11H160v-3.929h34.446L183.379,335.75l2.816-2.75,15.782,15.782Z"
-                                              transform="translate(-160 -333)" fill="#fff"/>
+                                        <path
+                                                d="M186.26,364.5l-2.816-2.75,11-11H160v-3.929h34.446L183.379,335.75l2.816-2.75,15.782,15.782Z"
+                                                transform="translate(-160 -333)" fill="#fff"/>
                                     </svg>
                                 </div>
                             </div>
@@ -84,9 +84,9 @@
                                 <div class="card__arrow">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="41.977" height="31.499"
                                          viewBox="0 0 41.977 31.499">
-                                        <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                              d="M186.26,364.5l-2.816-2.75,11-11H160v-3.929h34.446L183.379,335.75l2.816-2.75,15.782,15.782Z"
-                                              transform="translate(-160 -333)" fill="#fff"/>
+                                        <path
+                                                d="M186.26,364.5l-2.816-2.75,11-11H160v-3.929h34.446L183.379,335.75l2.816-2.75,15.782,15.782Z"
+                                                transform="translate(-160 -333)" fill="#fff"/>
                                     </svg>
                                 </div>
                             </div>
