--- a/src/operations.html
+++ b/src/operations.html
@@ -60,9 +60,9 @@
                                 <div class="operation-spollers__icon">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                          viewBox="0 0 25.323 19.002">
-                                        <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                              d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                              transform="translate(-160 -333)"/>
+                                        <path
+                                                d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                transform="translate(-160 -333)"/>
                                     </svg>
                                 </div>
                             </summary>
@@ -153,9 +153,9 @@
                                 <div class="operation-spollers__icon">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                          viewBox="0 0 25.323 19.002">
-                                        <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                              d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                              transform="translate(-160 -333)"/>
+                                        <path
+                                                d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                transform="translate(-160 -333)"/>
                                     </svg>
                                 </div>
                             </summary>
@@ -247,9 +247,9 @@
                                 <div class="operation-spollers__icon">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                          viewBox="0 0 25.323 19.002">
-                                        <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                              d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                              transform="translate(-160 -333)"/>
+                                        <path
+                                                d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                transform="translate(-160 -333)"/>
                                     </svg>
                                 </div>
                             </summary>
