--- a/src/services.html
+++ b/src/services.html
@@ -34,9 +34,9 @@
                                 <span class="main-block__link-icon">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                          viewBox="0 0 25.323 19.002">
-  <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-        d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-        transform="translate(-160 -333)" fill="#7eb72e"/>
+  <path
+          d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+          transform="translate(-160 -333)" fill="#7eb72e"/>
 </svg>
                                 </span>
                             </a>
@@ -48,9 +48,9 @@
                                 <span class="main-block__link-icon">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                          viewBox="0 0 25.323 19.002">
-  <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-        d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-        transform="translate(-160 -333)" fill="#7eb72e"/>
+  <path
+          d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+          transform="translate(-160 -333)" fill="#7eb72e"/>
 </svg>
                                 </span>
                             </a>
@@ -64,9 +64,9 @@
                                 <span class="main-block__link-icon">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                          viewBox="0 0 25.323 19.002">
-  <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-        d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-        transform="translate(-160 -333)" fill="#7eb72e"/>
+  <path
+          d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+          transform="translate(-160 -333)" fill="#7eb72e"/>
 </svg>
                                 </span>
                             </a>
@@ -116,9 +116,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
@@ -134,9 +134,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
@@ -152,9 +152,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
@@ -170,9 +170,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
@@ -205,9 +205,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
@@ -223,9 +223,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
@@ -241,9 +241,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
@@ -259,9 +259,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
@@ -294,9 +294,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
@@ -312,9 +312,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
@@ -330,9 +330,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
@@ -348,9 +348,9 @@
                                 <span class="spollers__icon">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="25.323" height="19.002"
                                              viewBox="0 0 25.323 19.002">
-                                            <path id="arrow_right_alt_FILL0_wght400_GRAD0_opsz48"
-                                                  d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
-                                                  transform="translate(-160 -333)"/>
+                                            <path
+                                                    d="M175.842,352l-1.7-1.659,6.637-6.637H160v-2.37h20.78l-6.676-6.676L175.8,333l9.521,9.521Z"
+                                                    transform="translate(-160 -333)"/>
                                         </svg>
                                     </span>
                             </summary>
