--- a/src/operations.html
+++ b/src/operations.html
@@ -4,7 +4,7 @@
 "title":"Operation management"
 })
 <body>
-<div class="wrapper">
+<div class="wrapper not-scroll">
     <div class="wrapper__scroll">
         <main class="page">
             <div class="hero">
